--- a/Angular Morning-Afternoon/auangular/src/app/calculator-comp/calculator-comp.component.html
+++ b/Angular Morning-Afternoon/auangular/src/app/calculator-comp/calculator-comp.component.html
@@ -1,5 +1,6 @@
+<html>
 <head>
-    
+    <title>CALCULATOR</title>
 </head>
 <body>
     <div class="container">
@@ -22,3 +23,4 @@
                 <h1>RESULT:{{ result }}</h1>
     </div>
 </body>
+</html>
